[project]
name = "reportobello"
version = "0.2.1"
description = "Python API library for Reportobello"
authors = [{name = "dosisod"}]
license = {text = "LGPL-3.0-or-later"}
readme = "README.md"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Typing :: Typed"
]
requires-python = ">=3.9"
dependencies = [
  "httpx >= 0.27.2",
]

[project.urls]
Source = "https://github.com/reportobello/reportobello-python"
